--- a/src/_locales/ar/messages.json
+++ b/src/_locales/ar/messages.json
@@ -100,7 +100,7 @@
     "description": "English: or"
   },
   "popupBlockedOnThisPage_v2": {
-    "message": "محجوب من هذه الصفحة",
+    "message": "محجوب على هذه الصفحة",
     "description": "For the new mobile-friendly popup design"
   },
   "popupBlockedSinceInstall_v2": {
@@ -444,7 +444,7 @@
     "description": "English: Parse and enforce Adblock+ element hiding filters."
   },
   "3pParseAllABPHideFiltersInfo": {
-    "message": "الفلاتر التجميلية تعمل لإزالة العناصر في صفحة الويب التي تعتبر إزعاج بصريًا و تلك التي لا يمكن حجبها عن طريق محركات التصفية القائمة على طلبات الشبكة.",
+    "message": "التشريحات التجميلية تعمل لإزالة العناصر في صفحة الويب التي تعتبر إزعاج بصريًا و تلك التي لا يمكن حجبها عن طريق محركات التشريحات القائمة على طلبات الشبكة.",
     "description": "Describes the purpose of the 'Parse and enforce cosmetic filters' feature."
   },
   "3pIgnoreGenericCosmeticFilters": {
@@ -452,11 +452,11 @@
     "description": "This will cause uBO to ignore all generic cosmetic filters."
   },
   "3pIgnoreGenericCosmeticFiltersInfo": {
-    "message": "الفلاتر التجميلية العمومية هي الفلاتر التجميلية التي تنطبق على كل مواقع الإنترنت. تفعيل هذا الخيار سوف يترك مساحة أقل من الذاكرة و قوة المعالجة للإستعمال من قبل صفحات الويب كنتيجة لمعالجة الفلاتر التجميلية العمومية.\n\nمن الأفضل تفعيل هذا الخيار على الأجهزة الأقل قوة.",
+    "message": "التشريحات التجميلية العمومية هي الفلاتر التجميلية التي تنطبق على كل مواقع الإنترنت. تفعيل هذا الخيار سوف يترك مساحة أقل من الذاكرة و قوة المعالجة للإستعمال من قبل صفحات الويب كنتيجة لمعالجة التشريحات التجميلية العمومية.\n\nمن الأفضل تفعيل هذا الخيار على الأجهزة الأقل قوة.",
     "description": "Describes the purpose of the 'Ignore generic cosmetic filters' feature."
   },
   "3pSuspendUntilListsAreLoaded": {
-    "message": "تعليق نشاط الشبكة حتى يتم تحميل كافة قوائم عوامل التصفية",
+    "message": "تعليق نشاط الشبكة حتى يتم تحميل كافة قوائم عوامل التشريحات",
     "description": "A checkbox in the 'Filter lists' pane"
   },
   "3pListsOfBlockedHostsHeader": {
@@ -540,15 +540,15 @@
     "description": "Warning against copy-pasting filters from random sources"
   },
   "1pEnableMyFiltersLabel": {
-    "message": "تفعيل تصفياتي المخصصة",
+    "message": "مكّن تشريحاتي المخصصة",
     "description": "Label for the checkbox use to enable/disable 'My filters' list"
   },
   "1pTrustMyFiltersLabel": {
-    "message": "السماح بالفلاتر المخصصة التي تتطلب الثقة",
+    "message": "السماح بالتشريحات المخصصة التي تتطلب الثقة",
     "description": "Label for the checkbox use to trust the content of 'My filters' list"
   },
   "1pImport": {
-    "message": "استيراد و إضافة",
+    "message": "استورد وألحق…",
     "description": "Button in the 'My filters' pane"
   },
   "1pExport": {
@@ -592,7 +592,7 @@
     "description": "Will discard manually-edited content and exit manual-edit mode"
   },
   "rulesImport": {
-    "message": "الاستيراد من ملف...",
+    "message": "استورد من ملف...",
     "description": ""
   },
   "rulesExport": {
@@ -632,11 +632,11 @@
     "description": "A concise description of the 'Trusted sites' pane."
   },
   "whitelistImport": {
-    "message": "استيراد و إضافة",
+    "message": "استورد وألحق…",
     "description": "Button in the 'Trusted sites' pane"
   },
   "whitelistExport": {
-    "message": "تصدير",
+    "message": "صدّر…",
     "description": "Button in the 'Trusted sites' pane"
   },
   "whitelistExportFilename": {
@@ -676,11 +676,11 @@
     "description": "Appears in the logger's tab selector"
   },
   "loggerReloadTip": {
-    "message": "إعادة تحميل محتوى علامة التبويب",
+    "message": "أعد تحميل محتوى علامة التبويب",
     "description": "Tooltip for the reload button in the logger page"
   },
   "loggerDomInspectorTip": {
-    "message": "تفعيل أو تعطيل مراقب DOM",
+    "message": "بدّل فاحص DOM",
     "description": "Tooltip for the DOM inspector button in the logger page"
   },
   "loggerPopupPanelTip": {
@@ -692,11 +692,11 @@
     "description": "Tooltip for the top-right info label in the logger page"
   },
   "loggerClearTip": {
-    "message": "امسح السجلات",
+    "message": "امسح المُسجّل",
     "description": "Tooltip for the eraser in the logger page; used to blank the content of the logger"
   },
   "loggerPauseTip": {
-    "message": "ايقاف التسجيل مؤقتا (استبعاد كل البيانات الواردة) ",
+    "message": "أوقف المُسجّل مؤقتا (استبعاد كل البيانات الواردة) ",
     "description": "Tooltip for the pause button in the logger page"
   },
   "loggerUnpauseTip": {
@@ -704,7 +704,7 @@
     "description": "Tooltip for the play button in the logger page"
   },
   "loggerRowFiltererButtonTip": {
-    "message": "تبديل ترشيح بيانات التسجيل ",
+    "message": "بدّل ترشيح المُسجّل ",
     "description": "Tooltip for the row filterer button in the logger page"
   },
   "logFilterPrompt": {
@@ -748,11 +748,11 @@
     "description": "Small header to identify the 'Details' pane for a specific logger entry"
   },
   "loggerEntryDetailsFilter": {
-    "message": "فلتر",
+    "message": "المرشّح",
     "description": "Label to identify a filter field"
   },
   "loggerEntryDetailsFilterList": {
-    "message": "قائمة الفلتر",
+    "message": "قائمة المرشحات",
     "description": "Label to identify a filter list field"
   },
   "loggerEntryDetailsRule": {
@@ -832,15 +832,15 @@
     "description": "Used in the static filtering wizard"
   },
   "loggerStaticFilteringFinderSentence1": {
-    "message": "فلتر ثابت <code>{{filter}}</code> موجود في:",
+    "message": "تصفية ثابتة <code>{{filter}}</code> موجود في:",
     "description": "Below this sentence, the filter list(s) in which the filter was found"
   },
   "loggerStaticFilteringFinderSentence2": {
-    "message": "الفلتر الثابت لا يوجد في أي من قوائم الفلاتر المفعلة",
+    "message": "الترشيح الثابت لا يوجد في أي من قوائم التشريحات المفعلة",
     "description": "Message to show when a filter cannot be found in any filter lists"
   },
   "loggerSettingDiscardPrompt": {
-    "message": "مدخلات السجل التي لا تطابق أيا من المعايير ستحذف تلقائيا:",
+    "message": "مدخلات المُسجّل التي لا تطابق أيا من المعايير ستتجاهل تلقائيا:",
     "description": "Logger setting: A sentence to describe the purpose of the settings below"
   },
   "loggerSettingPerEntryMaxAge": {
@@ -852,7 +852,7 @@
     "description": "A logger setting"
   },
   "loggerSettingPerTabMaxEntries": {
-    "message": "أبق بحد أقصى على {{input}} مدخلات في كل تبويبة",
+    "message": "أبق بحد أقصى على {{input}} مدخلات في كل لسان",
     "description": "A logger setting"
   },
   "loggerSettingPerEntryLineCount": {
@@ -924,7 +924,7 @@
     "description": "First paragraph of 'Questions and support' section in Support pane"
   },
   "supportS3H": {
-    "message": "تصفية المسائل/موقع الويب معطل",
+    "message": "تشريح المسائل/موقع الويب معطوب",
     "description": "Header of 'Filter issues' section in Support pane"
   },
   "supportS3P1": {
@@ -1196,19 +1196,19 @@
     "description": "Text warning about an incoming redirect"
   },
   "docblockedReasonLabel": {
-    "message": "Reason:",
+    "message": "السبب:",
     "description": "The label which prepend the actual reason why a page was blocked"
   },
   "docblockedReasonMalicious": {
-    "message": "Malicious",
+    "message": "ضار",
     "description": "An actual reason why a page was blocked"
   },
   "docblockedReasonTracker": {
-    "message": "Tracker",
+    "message": "متتبع",
     "description": "An actual reason why a page was blocked"
   },
   "docblockedReasonDisreputable": {
-    "message": "Disreputable",
+    "message": "سيئ السمعة",
     "description": "An actual reason why a page was blocked"
   },
   "cloudPush": {
